--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -81,7 +81,7 @@ tuna.gui.vlc.scene="Scene"
 tuna.gui.vlc.remove.source="Remove selected source"
 tuna.gui.vlc.add="Add"
 tuna.gui.vlc.invalid="Source or scene are no longer valid!"
-tuna.gui.vlc.mapping.text="This lets you configure which vlc sources tuna should use in what scene. First select a scene and then the vlc source you want to use. You can use multiple sources per scene and reorder them in the list below. Tuna will always use the first one, but you can switch between them via hotkeys."
+tuna.gui.vlc.mapping.text="This lets you configure which VLC sources Tuna should use in what scene. First select a scene and then the VLC source you want to use. You can use multiple sources per scene and reorder them in the list below. Tuna will always use the first one, but you can switch between them via hotkeys."
 tuna.hotkey.vlc.prev="Previous VLC source for tuna"
 tuna.hotkey.vlc.next="Next VLC source for tuna"
 
@@ -93,8 +93,8 @@ tuna.config.song.format="%m - %t"
 tuna.gui.tab.mpd.local="Local connection"
 tuna.gui.tab.mpd.remote="Remote connection"
 tuna.gui.tab.mpd.server="MPD server address"
-tuna.gui.tab.mpd.base.folder="MPD Music folder (For cover art)"
-tuna.gui.select.mpd.folder="Select the base folder of your mpd installation"
+tuna.gui.tab.mpd.base.folder="MPD music folder (for cover art)"
+tuna.gui.select.mpd.folder="Select the base folder of your MPD installation"
 
 # Window title tab
 tuna.gui.tab.windowtitle.title="Search term in title"
@@ -163,7 +163,7 @@ tuna.format.duration="Song duration"
 tuna.format.time_left="Song time left"
 tuna.format.line_break="Line break"
 tuna.format.json_compact="Compact song JSON"
-tuna.format.json_formatted="Fromatted song JSON"
+tuna.format.json_formatted="Formatted song JSON"
 
 tuna.format.genre="Genre"
 tuna.format.description="Description"
