Spotify UI: Add extra label for custom credentials

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -62,6 +62,7 @@ tuna.gui.tab.spotify.enablelog="Log anschalten"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
 tuna.gui.tab.spotify.timeout="Maximale Serverabfragendauer"
+tuna.gui.tab.spotify.custom_credentials="Die folgenden zwei Felder sind nicht notwendig, aber falls Tuna zu lange braucht, um die Informationen zu aktualisieren, können hier eigene API Zugangsdaten angegeben werden(<a href=\"https://vrsal.xyz/tuna-creds\">Mehr infos</a>)
 
 # vlc
 tuna.gui.vlc.disabled="VLC Integration ist ausgeschaltet, weil VLC nicht installiert ist."
