--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -68,6 +68,7 @@ tuna.gui.tab.spotify.enablelog="Enable log"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
 tuna.gui.tab.spotify.timeout="Request timeout"
+tuna.gui.tab.spotify.custom_credentials="These two fields are not required, but if tuna takes too long to fetch new song information you can provide custom API credentials here. (<a href=\"https://vrsal.xyz/tuna-creds\">Additional info</a>)
 
 # vlc
 tuna.gui.vlc.disabled="VLC support is disabled, either because OBS updated and it was disabled by the user, or because VLC isn't installed"
