--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -10,6 +10,7 @@ tuna.gui.tab.window_title="Título de la ventana"
 tuna.gui.tab.about="Acerca de"
 tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
 tuna.gui.tab.web="Navegador"
+tuna.gui.tab.wmc="Windows Media Control"
 
 # Source
 tuna.source.progress.color.fg="Color en primer plano"
@@ -32,6 +33,14 @@ tuna.dock.menu.toggle.source="Selección de fuente"
 tuna.gui.select.song.file="Seleccionar destino para el archivo de la canción"
 tuna.gui.select.cover.file="Seleccionar destino para el archivo de la portada"
 tuna.gui.select.lyrics.file="Seleccionar destino para el archivo de la letra"
+tuna.gui.tab.wmc="Windows Media Control"
+
+# MPRIS
+tuna.gui.tab.mpris="MPRIS"
+tuna.gui.tab.mpris.playerlist="Reproductor seleccionado:"
+
+# WMC
+tuna.gui.tab.wmc.playerlist="Reproductor seleccionado:"
 
 # icecast
 tuna.gui.tab.icecast="IceCast"
@@ -58,6 +67,8 @@ tuna.gui.tab.spotify.label.log="Registro de respuestas"
 tuna.gui.tab.spotify.enablelog="Habilitar registro"
 tuna.gui.tab.spotify.client_id="Spotify client ID"
 tuna.gui.tab.spotify.client_secret="Spotify client secret"
+tuna.gui.tab.spotify.timeout="Tiempo de espera de la petición"
+tuna.gui.tab.spotify.custom_credentials="Estos dos campos no son obligatorios, pero si Tuna tarda demasiado en obtener la información de la nueva canción, puedes proporcionar credenciales personalizadas de la API aquí. (<a href=\"https://vrsal.xyz/tuna-creds\">Info adicional</a>)
 
 # vlc
 tuna.gui.vlc.disabled="El soporte de VLC está deshabilitado, ya sea porque OBS se actualizó y el usuario lo deshabilitó o porque VLC no está instalado"
@@ -71,9 +82,9 @@ tuna.gui.vlc.scene="Escena"
 tuna.gui.vlc.remove.source="Eliminar fuente seleccionada"
 tuna.gui.vlc.add="Agregar"
 tuna.gui.vlc.invalid="¡La fuente o escena ya no es válida!"
-tuna.gui.vlc.mapping.text="Esto le permite configurar qué fuentes vlc debe usar tuna en qué escena. Primero seleccione una escena y luego la fuente vlc que desea usar. Puede utilizar varias fuentes por escena y reordenarlas en la lista a continuación. Tuna siempre usará la primera, pero puedes cambiar entre ellas a través de teclas de acceso rápido."
-tuna.hotkey.vlc.prev="Anterior fuente VLC para tuna"
-tuna.hotkey.vlc.next="Siguiente fuente VLC para tuna"
+tuna.gui.vlc.mapping.text="Esto te permite configurar qué fuentes VLC debe usar Tuna en qué escena. Primero selecciona una escena y luego la fuente VLC que deseas usar. Puedes utilizar varias fuentes por escena y reordenarlas en la lista a continuación. Tuna siempre usará la primera, pero puedes cambiar entre ellas a través de teclas de acceso rápido."
+tuna.hotkey.vlc.prev="Anterior fuente VLC para Tuna"
+tuna.hotkey.vlc.next="Siguiente fuente VLC para Tuna"
 
 # Config defaults
 tuna.config.song.placeholder="Sin canción en reproducción"
@@ -105,41 +116,76 @@ tuna.gui.output.edit.dialog.error.title="Error de salida"
 tuna.gui.output.edit.dialog.error="Los datos proporcionados son incorrectos. Asegúrese de que el formato no esté vacío y que la ruta sea válida."
 tuna.gui.output.edit.dialog.logmode="Modo registro de chat"
 tuna.gui.output.edit.dialog.format.error="¡La fuente de música seleccionada no admite una o más de las opciones de formato utilizadas!"
+tuna.gui.output.edit.dialog.format.old="El nuevo sistema de formato ya no utiliza %t etc. En su lugar utiliza {title}, {artist} etc."
+tuna.gui.tab.output.edit.dialog.format="Variable"
+tuna.gui.tab.output.edit.dialog.value="Valor"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Salidas de info de la canción"
 tuna.gui.tab.basics.song.info="Ruta de info de la canción"
 tuna.gui.tab.basics.song.logmode="Modo de registro"
 tuna.gui.tab.basics.song.cover="Ruta de la portada"
-tuna.gui.tab.basics.song.cover.enable="Intentar descargar la portada"
+tuna.gui.tab.basics.song.lyrics.enable="Buscar letra"
+tuna.gui.tab.basics.song.cover.enable="Buscar la portada"
+tuna.gui.tab.basics.song.cover.download.missing="Buscar portadas faltantes en itunes.apple.com con tamaño"
+tuna.gui.tab.basics.song.cover.largest="El mayor disponible"
 tuna.gui.tab.basics.song.lyrics="Ruta de la letra"
 tuna.gui.tab.basics.song.format="Formato de la canción"
 tuna.gui.tab.basics.song.output.add="Añadir nuevo"
 tuna.gui.tab.basics.song.output.remove="Eliminar seleccionado"
 tuna.gui.tab.basics.song.output.edit="Editar seleccionado"
 tuna.gui.tab.basics.song.placeholder="Mostrar mientras no hay canción"
-tuna.gui.tab.basics.song.placeholder.hint="Usar %s para espacios iniciales/finales"
-tuna.gui.tab.basics.format.info="Tenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando la letra en mayúscula (p.e. %T) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres"
-tuna.gui.tab.basics.format.title="Título"
-tuna.gui.tab.basics.format.artist="Artista"
-tuna.gui.tab.basics.format.date.full="Fecha de lanzamiento"
-tuna.gui.tab.basics.format.number="Número de pista"
-tuna.gui.tab.basics.format.date.year="Año de lanzamiento"
-tuna.gui.tab.basics.format.label="Discográfica"
-tuna.gui.tab.basics.format.time.left="Tiempo restante"
-tuna.gui.tab.basics.format.linebreak="Salto de línea"
-tuna.gui.tab.basics.format.disc.number="Número de disco"
-tuna.gui.tab.basics.format.album="Álbum"
-tuna.gui.tab.basics.format.time.progress="Progreso de la canción"
-tuna.gui.tab.basics.format.time.length="Duración"
-tuna.gui.tab.basics.format.space="Espacio en blanco"
+tuna.gui.tab.basics.song.placeholder.hint="Usa %s para espacios iniciales/finales, %e para saltos de línea"
+tuna.gui.tab.basics.format.info="Tenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando mayúsculas (p.e. {TITLE}) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres (p.e. {TITLE:10})"
 tuna.gui.tab.basics.source="Fuente de la canción"
 tuna.gui.tab.basics.status.stopped="Tuna no se está ejecutando"
 tuna.gui.tab.basics.status.started="Tuna se está ejecutando"
 tuna.gui.tab.basics.refreshrate="Frecuencia de actualización"
 tuna.gui.tab.basics.start="Iniciar"
 tuna.gui.tab.basics.stop="Detener"
-tuna.gui.tab.basics.notrunning="Vista previa: El plugin no se está ejecutando"
-tuna.gui.tab.basics.preview="Vista previa: "
-tuna.gui.tab.basics.host.server="Alojar/recibir información en el servidor web local con puerto: "
+tuna.gui.tab.basics.host.server="Alojar/recibir información en servidor web local con puerto: "
 tuna.gui.tab.basics.removeextensions="Eliminar extensiones de archivo del título"
+
+# format
+tuna.format.title="Título"
+tuna.format.album="Álbum"
+tuna.format.release_date="Fecha de lanzamiento"
+tuna.format.release_year="Año de lanzamiento"
+tuna.format.release_month="Mes de lanzamiento"
+tuna.format.release_day="Día de lanzamiento"
+tuna.format.label="Discográfica"
+tuna.format.file_name="Nombre del archivo"
+tuna.format.first_artist="Artista principal"
+tuna.format.artists="Todos los artistas"
+tuna.format.track_number="Número de pista"
+tuna.format.disc_number="Número de disco"
+tuna.format.progress="Progreso de la canción"
+tuna.format.duration="Duración"
+tuna.format.time_left="Tiempo restante"
+tuna.format.line_break="Salto de línea"
+tuna.format.json_compact="Canción compacta en JSON"
+tuna.format.json_formatted="Canción formateada en JSON"
+
+tuna.format.genre="Género"
+tuna.format.description="Descripción"
+tuna.format.setting="Ajuste"
+tuna.format.now_playing="Reproduciendo"
+tuna.format.track_id="ID de la pista"
+tuna.format.season="Temporada"
+tuna.format.show_name="Nombre del Show"
+tuna.format.album_artist="Artista del álbum"
+tuna.format.copyright="Copyright"
+tuna.format.rating="Valoración"
+tuna.format.language="Idioma"
+tuna.format.encoded_by="Codificado por"
+tuna.format.director="Director"
+tuna.format.episode="Episodio"
+tuna.format.actors="Actores"
+tuna.format.disc_total="Total de discos"
+tuna.format.track_total="Total de pistas"
+tuna.format.url="URL de la canción"
+tuna.format.playlist_name="Lista de reproducción"
+tuna.format.playlist_url="URL de la lista de reproducción"
+
+tuna.format.date="Fecha en que empezó la canción"
+tuna.format.time="Hora en que empezó la canción"
